moved to exmaple

--- a/example/index.html
+++ b/example/index.html
@@ -1,5 +1,5 @@
 <html>
-<script src="GameOfLife.js"></script>
+<script src="../GameOfLife.js"></script>
 <link rel="stylesheet" href="stylesheet.css">
 
 <body>
@@ -19,7 +19,7 @@
             startRandomized: true,
             interval: 100
         }
-        var game = new GameOfLife(options);
+        var game = new GameOfLife();
     </script>
 </body>
 
