fixed randomized param

--- a/example/index.html
+++ b/example/index.html
@@ -16,7 +16,7 @@
             columns: 50,
             gridContainer: 'canvas',
             cellSize: 10,
-            startRandomized: true,
+            startRandomized: false,
             interval: 100
         }
         var game = new GameOfLife();
