--- a/example/index.html
+++ b/example/index.html
@@ -6,7 +6,8 @@
     <center>
         <div id="canvas"></div>
         <hr>
-        <input type="button" onclick="game.start();" value="Start">
+        <input type="button" onclick="game.step();" value="Next Step">
+        <input type="button" onclick="game.start();" value="Autoplay">
         <input type="button" onclick="game.stop();" value="Stop">
         <input type="button" onclick="game.randomize();" value="Randomize">
         <span id="stepCounter">Steps Taken: 0</span>
